--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
         "test": "echo err!! \"but dont be afraid, this is a test.\" && exit 1"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/typography": "^0.3.0",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.0.2",
         "axios": "~0.21",
         "cross-env": "~7.0.3",
         "del": "~6.0.0",
         "laravel-mix": "~6.0.6",
         "lodash": "~4.17.19",
-        "postcss": "~8.2.6",
+        "postcss": "^8.2.8",
         "postcss-cli": "~8.3.1",
-        "postcss-import": "~14.0.0",
-        "tailwindcss": "~2.0.3",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^2.0.1",
         "webpack": "~5.23.0",
         "webpack-cli": "~4.5.0"
     }
