--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,15 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
+      - run:
+          name: "Node.js と npm の更新"
+          command: |
+            curl -sSL "https://nodejs.org/dist/v11.10.0/node-v11.10.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v11.10.0-linux-x64/bin/node
+            curl https://www.npmjs.com/install.sh | sudo bash
+      - run:
+          name: 現行バージョンのノードのチェック
+          command: node -v
+
       # -n メッセージ無効 --prefer-dist 圧縮ファイルダウンロード
       - run: composer install -n --prefer-dist
 
