--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.4.16-fpm-buster
-      - image: circleci/mysql:5.7.33
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -19,35 +18,60 @@ jobs:
       #
       # - image: redis:2.8.19
 
-    environment:
-      - APP_DEBUG: true
-      # .env.testingを使用
-      - APP_ENV: testing
-      - APP_KEY: base64:hvoPr0CX0tbk04SuMyZ1cRZNpwQUzCAtD9fcev1tiyA= #不要かも
-      # config/database.php $connections['circle_testing']を使用
-      - DB_CONNECTION: circle_test
-      - MYSQL_ALLOW_EMPTY_PASSWORD: true
+      - image: circleci/mysql:5.7.33
+        environment:
+          - APP_DEBUG: true
+          # .env.testingを使用
+          - APP_ENV: testing
+          - APP_KEY: base64:hvoPr0CX0tbk04SuMyZ1cRZNpwQUzCAtD9fcev1tiyA= #不要かも
+          # config/database.php $connections['circle_testing']を使用
+          - DB_CONNECTION: circle_test
+          - MYSQL_ALLOW_EMPTY_PASSWORD: true
 
     # 複数のプロジェクトで利用することを考慮して明示する
     working_directory: ~/-y-web21-circle-ci-first
 
     steps:
-      - checkout # git cloneっぽい
+      # git cloneっぽいなにか
+      - checkout
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
       # Install PHP Extension
       - run: sudo docker-php-ext-install pdo_mysql
 
+      # npm
       - run:
           name: "Node.js と npm の更新"
           command: |
             curl -sSL "https://nodejs.org/dist/v11.10.0/node-v11.10.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v11.10.0-linux-x64/bin/node
             curl https://www.npmjs.com/install.sh | sudo bash
       - run:
-          name: 現行バージョンのノードのチェック
-          command: node -v
+          name: "node -v npm -v"
+          command: |
+            node -v
+            npm -v
+      - restore_cache:
+          keys:
+            - v1-node-{{ checksum "package.json" }}
+            - v1-node-
+      - run: npm install
+      - save_cache:
+          key: v1-node-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
 
+      # yarn
+      # - run: curl -o- -L https://yarnpkg.com/install.sh | bash
+      # - restore_cache:
+      #     keys:
+      #       - node-v1-{{ checksum "package.json" }}
+      #       - node-v1-
+      # - run: yarn install
+      # - save_cache:
+      #     key: node-v1-{{ checksum "package.json" }}
+      #     paths:
+      #       - node_modules
 
       # composer インストールとキャッシュ
       # Download and cache dependencies
@@ -67,40 +91,16 @@ jobs:
           paths:
             - ./vendor
 
-      # yarn i と キャッシュ
-      # - restore_cache:
-      #     keys:
-      #       - node-v1-{{ checksum "package.json" }}
-      #       - node-v1-
-      # - run: yarn install
-      # - save_cache:
-      #     key: node-v1-{{ checksum "package.json" }}
-      #     paths:
-      #       - node_modules
-
-      # npm i と キャッシュ
-      - restore_cache:
-         keys:
-           - v1-node-{{ checksum "package.json" }}
-           - v1-node-
-      - run: npm install
-      - save_cache:
-         key: v1-node-{{ checksum "package.json" }}
-         paths:
-           - ./node_modules
-
       # prepare the database
       # - run: touch storage/testing.sqlite
       # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
-
-      # run seeding
-      - run: php artisan migrate
-      - run: php artisan db:seed
-
-      # run tests with phpunit or codecept
       - run:
-          name: Run PHPUnit
+          name: "artisan db"
+          command: |
+            php artisan migrate
+            php artisan db:seed
+
+      - run:
+          name: "Run PHPUnit"
           command: vendor/bin/phpunit
-      # - run: ./vendor/bin/codecept build
-      # - run: ./vendor/bin/codecept run
