--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       # config/database.php $connections['circle_testing']を使用
       - DB_CONNECTION: circle_test
       - MYSQL_ALLOW_EMPTY_PASSWORD: true
+      - TEST_MGS: UCHU
 
     # 複数のプロジェクトで利用することを考慮して明示する
     working_directory: ~/-y-web21-circle-ci-first
@@ -34,6 +35,10 @@ jobs:
     steps:
       # ソース コードを作業ディレクトリにチェックアウトします
       - checkout
+
+      - run:
+        name: hiroshi
+        command: echo $TEST_MSG $APP_ENV $DB_HOST
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
