--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,10 @@ jobs:
 
       - run:
         name: hiroshi
-        command: echo $TEST_MSG $APP_ENV $DB_HOST
+        command: |
+          echo $TEST_MSG
+          echo $APP_ENV
+          echo $DB_HOST
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
