--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ jobs:
       - image: circleci/php:7.4.16-fpm-buster
         environment:
           - APP_DEBUG: true
-          # .env.testingを使用
-          - APP_ENV: testing
+          # .env.circle_testingを使用
+          - APP_ENV: circle_testing
           # - APP_KEY: base64:hvoPr0CX0tbk04SuMyZ1cRZNpwQUzCAtD9fcev1tiyA= #不要かも
           # config/database.php $connections['circle_testing']を使用
-          - DB_CONNECTION: circle_testing
+          - DB_CONNECTION: mysql_circle_testing
           # - DB_DATABASE: test_sample01
           # - DB_USERNAME: root
 
