--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,8 @@ jobs:
       - run:
           name: "artisan db"
           command: |
-            php artisan migrate --env circle_testing --database=mysql_circle_testing
+            php artisan migrate --env circle_testing
+          # php artisan migrate --env circle_testing --database=mysql_circle_testing
       # php artisan db:seed
 
       - run:
