--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,7 @@ jobs:
       - image: circleci/php:7.4.16-fpm-buster
         environment:
           - APP_DEBUG: true
-          # .env.testingを使用
           - APP_ENV: testing
-          # config/database.php $connections['circle_testing']を使用
           - DB_CONNECTION: mysql_circle_testing
 
       # Specify service dependencies here if necessary
@@ -24,13 +22,11 @@ jobs:
       #
       # - image: redis:2.8.19
 
-      - image: circleci/mysql:5.7.33
-        environment:
-          - MYSQL_ALLOW_EMPTY_PASSWORD: true
+      # - image: circleci/mysql:5.7.33
+        # environment:
+          # - MYSQL_ALLOW_EMPTY_PASSWORD: true
           # - MYSQL_DATABASE: circle_test
 
-    environment:
-      - COMMON_ENV: test_value
 
     # 複数のプロジェクトで利用することを考慮して明示する
     working_directory: ~/application
