--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,45 +27,26 @@ jobs:
       # Install PHP Extension
       - run: sudo docker-php-ext-install pdo_mysql
 
-      # npm
-      # - run:
-      #     name: "Node.js と npm の更新"
-      #     command: |
-      #       curl -sSL "https://nodejs.org/dist/v11.10.0/node-v11.10.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v11.10.0-linux-x64/bin/node
-      #       curl https://www.npmjs.com/install.sh | sudo bash
-      # - run:
-      #     name: "node -v npm -v"
-      #     command: |
-      #       node -v
-      #       npm -v
-      # - restore_cache:
-      #     keys:
-      #       - v1-node-{{ checksum "package.json" }}
-      #       - v1-node-
-      # - run: npm install
-      # - save_cache:
-      #     key: v1-node-{{ checksum "package.json" }}
-      #     paths:
-      #       - ./node_modules
-
-
-
-      # yarn
+      npm
       - run:
-          name: yarn
+          name: "Node.js と npm の更新"
           command: |
-            sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-            echo "deb http://nightly.yarnpkg.com/debian/ nightly main" | sudo tee /etc/apt/sources.list.d/yarn-nightly.list
-            sudo apt update && sudo apt install yarn
+            curl -sSL "https://nodejs.org/dist/v11.10.0/node-v11.10.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v11.10.0-linux-x64/bin/node
+            curl https://www.npmjs.com/install.sh | sudo bash
+      - run:
+          name: "node -v npm -v"
+          command: |
+            node -v
+            npm -v
       - restore_cache:
           keys:
-            - node-v1-{{ checksum "package.json" }}
-            - node-v1-
-      - run: yarn install
+            - v1-node-{{ checksum "package.json" }}
+            - v1-node-
+      - run: npm install
       - save_cache:
-          key: node-v1-{{ checksum "package.json" }}
+          key: v1-node-{{ checksum "package.json" }}
           paths:
-            - node_modules
+            - ./node_modules
 
       # composer Download and cache dependencies
       - restore_cache:
