--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,8 @@ jobs:
 
       - run:
           name: "Run PHPUnit"
-          command: vendor/bin/phpunit
+          command: |
+            vendor/bin/phpunit || echo "export TEST_RESULT=${?}" >> $BASH_ENV
 
       - run:
           name: "view log"
