--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,15 +89,15 @@ jobs:
           command: |
             vendor/bin/phpunit
 
-      - run:
-          name: "view test log"
-          command: tail -n 100 ./storage/logs/laravel.log
-          when: always
+      # - run:
+      #     name: "view test log"
+      #     command: tail -n 100 ./storage/logs/laravel.log
+      #     when: always
 
-      - run:
-          name: "view test logg"
-          command: cat tests/imo/ttt.txt
-          when: always
+      # - run:
+      #     name: "view test logg"
+      #     command: cat tests/imo/ttt.txt
+      #     when: always
 
       - run: ls -al ./storage/
       - run: ls -al ./storage/logs/
